--- a/style/Blocks/blog.less
+++ b/style/Blocks/blog.less
@@ -2,6 +2,10 @@
 
 .blog {
 	margin-bottom: 8.13rem;
+
+	@media @tablet {
+		margin-bottom: 4rem;
+	}
 }
 
 .blog__title {
@@ -10,6 +14,10 @@
 	text-align: center;
 	margin-bottom: 6px;
 	text-transform: uppercase;
+
+	@media @tablet {
+		font-size: 2.5rem;
+	}
 }
 
 .blog__suptitle {
@@ -18,6 +26,10 @@
 	color: #8C8C8D;
 	text-align: center;
 	margin-bottom: 55px;
+
+	@media @tablet {
+		margin-bottom: 2rem;
+	}
 }
 
 .blog__link {
