--- a/style/Blocks/portfolio.less
+++ b/style/Blocks/portfolio.less
@@ -3,17 +3,44 @@
 .portfolio {
 	display: flex;
 	flex-wrap: wrap;
-	// justify-content: space-between;
-	margin: 0 -1rem;
+	
+	margin: 0 -1rem auto;
 }
 
 .portfolio__inner {
 	padding: 1rem;
-	width: 33.3333%;
-	
+	width: 33.3333333%;
+
+	transition: width .2s linear;
+
+	@media @mobile {
+		width: 50%;
+	}
+
+	@media @mobile-sm {
+		width: 100%;
+	}
+
+	&:nth-child(9) {
+		@media @mobile {
+			display: none;
+		}
+
+		@media @mobile-sm {
+			display: block;
+		}
+	}
+
+	&.hide {
+		padding: 0;
+		width: 0;
+		height: 0;
+		overflow: visible;
+	}
 }
 
 .portfolio__item {
+	
 	border-radius: 10px;
 	box-shadow: 0 0 4px fade(#000, 25%);
 	cursor: pointer;
@@ -21,15 +48,19 @@
 	transition: box-shadow .1s linear;
 	overflow: hidden;
 
+	
+
 	&:hover {
 		box-shadow: 0 0 15px fade(#000, 25%);
 	}
 }
 
 .portfolio__previe {
+	
 	display: block;
 	max-width: 100%;
 	height: auto;
+
 }
 
 
@@ -38,11 +69,17 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
+	align-items: baseline;
+
 	font-weight: bold;
 	font-size: 1.06rem;
 	text-transform: uppercase;
 
 	padding: 1rem 1.26rem 0.86rem 0.86rem;
+
+	@media @tablet {
+		font-size: .7rem;
+	}
 	
 	.portfolio__item-filters {
 		font-weight: 400;
@@ -50,7 +87,14 @@
 		font-size: 0.8rem;
 		width: 100%;
 		margin-bottom: 6px;
+
+		text-transform: uppercase;
+
+		@media @tablet {
+			font-size: 0.7rem;
+		}
 	}
+
 }
 
 .button__inner {
