--- a/style/Blocks/works.less
+++ b/style/Blocks/works.less
@@ -2,6 +2,10 @@
 
 .works {
 	padding: 2.8rem 0 8.4rem 0;
+
+	@media @tablet {
+		padding: 2.8rem 0 3rem;
+	}
 	
 	.works__filters {
 		display: flex;
