--- a/style/style.less
+++ b/style/style.less
@@ -1,5 +1,5 @@
 
-// compress: true
+// compress: true, sourceMap: true
 
 @import "vars";
 
@@ -79,6 +79,8 @@ body {
 } */
 }
 
+/* Vendor */
+@import "vendor/slick";
 
 // blocks --------------
 @import "blocks/header";
@@ -104,3 +106,7 @@ body {
 @import "Pop_up/time__line";
 @import "Pop_up/hire_me";
 @import "Pop_up/form";
+
+/* Adaptive */
+@import "Blocks/Adaptive/burger";
+@import "Blocks/Adaptive/about_mobile";
