--- a/style/vars.less
+++ b/style/vars.less
@@ -3,3 +3,9 @@
 @black: #2B2A2C;
 @dark-grey: #717072;
 @text-color: #6A696B;
+
+@mobile-sm: ~"(max-width: 565px)";
+@mobile: ~"(max-width: 767px)";
+@tablet: ~"(max-width: 991px)";
+@notebook: ~"(max-width: 1199px)";
+@footer: ~"(max-width: 415px)";
