--- a/style/Blocks/about.less
+++ b/style/Blocks/about.less
@@ -4,12 +4,31 @@
 	display: flex;
 	margin-bottom: 6.86rem;
 	max-width: 1090px;
+
+	@media @tablet {
+		display: none;
+	}
+
+	@media @mobile {
+		display: flex;
+		flex-wrap: wrap;
+	}
 }
+
+
 
 .about__inner-photo {
 	background: url(../img/about/bg.png) left bottom no-repeat;
 	background-position-x: 20px;
-	position: relative;
+
+	@media @tablet {
+		background:none;
+		
+	}
+
+	@media @mobile {
+		order: 2;
+	}
 
 }
 
@@ -17,15 +36,30 @@
 	width: 50%;
 	position: relative;
 
+	background-color: #efefef;	
+
+	@media @mobile {
+		width: 100%;
+	}
+
 	img {
-		position: relative;
+		position: absolute;
 		max-width: 100%;
 		height: auto;
 		display: block;
 		z-index: 2;
+		bottom: 0;
+
+		@media @tablet {
+			width: 400px;
+		}
+
+		@media @mobile {
+			position: relative;
+		}
 	}
 
-	&::before {
+	/* &::before {
 		content: "";
 		width: 414px;
 		height: 414px;
@@ -35,12 +69,23 @@
 		left: 1rem;
 		bottom: 0;
 		z-index: 1;
-	}
+	} */
 }
 
 .about__inner-content {
 	padding: 1.66rem 0 1.66rem 3.24rem;
 	width: 50%;
+
+	@media @tablet {
+			padding: 3.86rem 0 1.66rem 3.24rem;
+		}
+
+		@media @mobile {
+			width: 100%;
+			order: 1;
+
+			padding: 2rem 0 2rem 0;
+		}
 
 	.about__title {
 		font-weight: bold;
@@ -48,14 +93,30 @@
 		font-size: 3rem;
 		position: relative;
 		left: 10px;
+
+		@media @tablet {
+			font-size: 2.5rem;			
+		}
 	}
 
 	.about__subtitle {
 		font-weight: bold;
 		color: fade(@black, 15%);
-		font-size: 6.03rem;
+		font-size: 5.2rem;
 		margin-bottom: 1.4rem;
 		line-height: 1.1;
+
+		@media @tablet {
+			font-size: 3.5rem;
+		}
+
+		@media @mobile {
+			margin-bottom: 1rem;
+
+			&::after {
+				content: '?';
+			}
+		}
 	}
 
 	.about__text {
@@ -68,6 +129,10 @@
 		margin-bottom: 2.66rem;
 		padding: 1rem 0;
 		overflow: auto;
+
+		@media @mobile {
+			margin-bottom: .7rem;
+		}
 
 		-webkit-mask-image: linear-gradient(
 		360deg ,transparent 0,rgba(0,0,0,.25) 18px,#000 18px,#000 calc(100% - 18px),rgba(0,0,0,.25) calc(100% - 18px),transparent);
