--- a/style/Blocks/nav.less
+++ b/style/Blocks/nav.less
@@ -4,6 +4,10 @@
 	display       : flex;
 	text-transform: uppercase;
 	height        : 100%;
+
+	@media @mobile {
+		display: none;
+	}
 }
 
 .nav__link {
@@ -15,6 +19,11 @@
 
 	margin: 0.66rem 2rem;
 	cursor: pointer;
+
+	@media @tablet {
+		font-size: 0.775rem;
+		margin: 0.66rem 1.5rem;
+	}
 
 	&.active::before {
 		width: 100%;
@@ -54,4 +63,9 @@
 			box-shadow: 2px 2px 10px fade(#000, 24%);
 		}
 	}
+}
+
+.button__wrap {
+	display: flex;
+		
 }
