--- a/style/Pop_up/hire_me.less
+++ b/style/Pop_up/hire_me.less
@@ -1,7 +1,6 @@
 // main: ../style.less
 
 .pop-up {
-	display: none;
 	background-color: fade(#333, 25%);
 	width: 100%;
 	min-height: 100%;
@@ -24,28 +23,27 @@
 	}
 }
 
-.pop-up.active{
-	display: block;
-    animation-duration: 0.55s;  /* Время работы анимации */
-    animation-fill-mode: both;  /* Поведение анимации */
-    animation-name: fadeInDown; /* Имя анимации */
-}
+// .pop-up.active{
+// 	display: block;
+//     animation-duration: 0.55s;  /* Время работы анимации */
+//     animation-fill-mode: both;  /* Поведение анимации */
+//     animation-name: fadeInDown; /* Имя анимации */
+// }
 
-@keyframes fadeInDown { /* Сама анимация */
-    0% {                /* Старт анимации */
-        opacity: 0;
-        transform: translate3d(0px, -100%, 0px);
-    }
-    100% {              /* в финале анимации - финал это заданная 0.55s */
-        opacity: 1;
-        transform: none;
-    }
-}
+// @keyframes fadeInDown { /* Сама анимация */
+//     0% {                /* Старт анимации */
+//         opacity: 0;
+//         transform: translate3d(0px, -100%, 0px);
+//     }
+//     100% {              /* в финале анимации - финал это заданная 0.55s */
+//         opacity: 1;
+//         transform: none;
+//     }
+// }
 
 .pop-up__form {
 	padding: 28px 32px;
-	background-color: #fff;
-	max-height: 676px;
+	width: 48%;
 }
 
 .pop-up__contacts {
@@ -76,31 +74,20 @@
 
 .pop-up__inner {
 	display: flex;
-	max-width: 900px;
-	min-height: 676px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.pop-up__form {
-	width: 430px;
-	min-height: 676px;
 }
 
 .pop-up__photo {
-	width: 470px;
+	width: 52%;
 	position: relative;
+	overflow: hidden;
 
 	& img {
-		display: block;
-	}
-
-	.close {
 		position: absolute;
-		top: 10px;
-		right: 10px;
-		cursor: pointer;
+		top: 50%;
+		left: 50%;
+		transform: translate3d(-50%, -50%, 0);
+		width: 100%;
+		height: auto;
+		display: block;
 	}
 }
