--- a/style/Pop_up/modal.less
+++ b/style/Pop_up/modal.less
@@ -1,21 +1,37 @@
 // main: ../style.less
 
 .modal {
-	display: flex;
+	opacity: 0;
+	visibility: hidden;
 
 	width: 100%;
 	height: 100%;
 	padding: 1rem;
-
-	background-color: fade(#000, 70%);
+	filter: blur();
+	background: fade(#000, 70%);
+	-webkit-backdrop-filter: blur(5px);
+	backdrop-filter: blur(5px);
 
 	position: fixed;
-	top: 0;
-	left: 0;
+	top: 50%;
+	left: 50%;
 	z-index: 1000;
 
+	transform: translate(-50%, -50%);
+
 	overflow: auto;
+
+	transition: .2s linear;
+
+	display: flex;
+	
+	&.hide {
+		opacity: 1;
+		visibility: visible;
+		display: flex;
+	}
 }
+
 
 .modal__dialog {
 	width: 100%;
@@ -25,6 +41,11 @@
 	background-color: #fff;
 	position: relative;
 
+	&--sm {
+		width: 100%;
+		max-width: 900px;
+	}
+
 	.close {
 		position: absolute;
 		top: 10px;
@@ -32,7 +53,7 @@
 		z-index: 1;
 		cursor: pointer;
 
-		transition: transform .3s linear;
+		transition: transform .2s linear;
 
 		&:hover {
 			transform: rotate(90deg);
