--- a/style/Blocks/about.less
+++ b/style/Blocks/about.less
@@ -51,7 +51,7 @@
 		bottom: 0;
 
 		@media @tablet {
-			width: 400px;
+			width: 470px;
 		}
 
 		@media @mobile {
@@ -97,6 +97,10 @@
 		@media @tablet {
 			font-size: 2.5rem;			
 		}
+
+		@media @mobile {
+			position: static;
+		}
 	}
 
 	.about__subtitle {
@@ -107,7 +111,7 @@
 		line-height: 1.1;
 
 		@media @tablet {
-			font-size: 3.5rem;
+			font-size: 3.2rem;
 		}
 
 		@media @mobile {
@@ -125,13 +129,14 @@
 		font-size: 0.8rem;
 		line-height: 2;
 		width: 100%;
-		height: 271px;
+		/* height: 271px; */
 		margin-bottom: 2.66rem;
 		padding: 1rem 0;
 		overflow: auto;
 
 		@media @mobile {
 			margin-bottom: .7rem;
+			height: auto;
 		}
 
 		-webkit-mask-image: linear-gradient(
