--- a/style/Blocks/footer.less
+++ b/style/Blocks/footer.less
@@ -28,6 +28,7 @@
 
 	@media @mobile {
 		margin-bottom: 1.5rem;
+		align-items: center;
 	}
 }
 
@@ -40,6 +41,11 @@
 
 	@media @tablet {
 		margin-bottom: 1.5rem;
+	}
+
+	@media @mobile {
+		border-right: 0;
+		padding-right: 0;
 	}
 
 	& p {
@@ -56,7 +62,7 @@
 		padding-left: 0;
 	}
 
-	.footer__link {
+	.footer__link:not(:last-child) {
 		padding-right: 1.2rem;
 		
 		& img {
