--- a/style/Blocks/header.less
+++ b/style/Blocks/header.less
@@ -1,7 +1,18 @@
-// main ../style.less
+// main: ../style.less
 
 .header {
 	padding: 1.2rem 0;
+	position: relative;
+
+	&.fixed {
+		position: fixed;
+		width: 100%;
+		background-color: #fff;
+		/* top: 0;
+		left: 0; */
+		z-index: 10000;
+		box-shadow: 10px 1px 10px #333;
+	}
 }
 
 .header__inner {
