--- a/style/Pop_up/modal-work.less
+++ b/style/Pop_up/modal-work.less
@@ -24,11 +24,10 @@
 			transform: translate3d(-50%, -50%, 0);
 
 			@media @tablet {
-			position: relative;
-			transform: none;
-			top: 0;
-			left: 0;
-		}
+				position: relative;
+				transform: translate3d(-50%, 0, 0);
+
+			}
 		}
 	}
 }
@@ -37,7 +36,7 @@
 	width: 35%;
 	position: relative;
 
-	padding: 50px 99px 15px 26px;
+	padding: 50px 39px 15px 26px;
 
 	@media @tablet {
 		width: 100%;
