--- a/style/Pop_up/resume.less
+++ b/style/Pop_up/resume.less
@@ -18,6 +18,10 @@
 	font-weight: bold;
 	color: @black;
 	margin-bottom: 3.61rem;
+
+	@media @resume {
+		margin-bottom: 2rem;
+	}
 }
 
 .download__resume {
@@ -39,7 +43,13 @@
 		}
 
 		@media @tablet {
-		margin: 0 1.5rem;
-	}
+			margin: 0 1.5rem;
+		}
+
+		@media @resume {
+			margin-top: 1rem;
+			
+			
+		}
 	}
 }
