--- a/style/vars.less
+++ b/style/vars.less
@@ -9,3 +9,4 @@
 @tablet: ~"(max-width: 991px)";
 @notebook: ~"(max-width: 1199px)";
 @footer: ~"(max-width: 415px)";
+@resume : ~"(max-width: 679px)";
