--- a/style/Blocks/intro.less
+++ b/style/Blocks/intro.less
@@ -1,5 +1,13 @@
 // main: ../style.less
 
+.intro {
+	padding-top: 60px;
+
+	@media @tablet {
+		padding-top: 100px;
+	}
+}
+
 .intro__inner {
 	display: flex;
 	justify-content: space-between;
@@ -22,6 +30,7 @@
 	@media @mobile {
 		background-size: 290px auto;
 		padding-top: 1.5rem;
+		z-index: 999;
 	}
 
 	@media @mobile-sm {
@@ -68,7 +77,7 @@
 	position: absolute;
 	right: 0;
 	bottom: -1px;
-	z-index: 1;
+	z-index: 1000;
 
 	@media @tablet {
 		width: 360px;
@@ -76,6 +85,7 @@
 
 	@media @mobile {
 		width: 290px;
+		z-index: 999;
 	}
 
 	@media @mobile-sm {
