--- a/style/Blocks/nav.less
+++ b/style/Blocks/nav.less
@@ -5,28 +5,35 @@
 	flex-wrap: wrap;
 	text-transform: uppercase;
 	height        : 100%;
+	background-color: #fff;
+	position: relative;
 
 	@media @mobile {
+		visibility: hidden;
+		opacity: 0;
 		text-align: center;
 
 		justify-content: center;
 
 		position: absolute;
 		top: 99%;
-		right: -100%;
-		z-index: 1000;
+		left: 0;
 
 		width: 100%;
 		height: auto;
 
 		padding-bottom: 1rem;
+		padding-top: 1rem;
 
 		transition: all .3s linear;
+		background-color: #fff;
 
 		&.show {
+			opacity: 1;
+			visibility: visible;
 			background-color: #fff;
-			right: 0;
-
+					
+			box-shadow: 0px 11px 10px fade(#333, 30%);
 		}
 	}
 }
@@ -48,6 +55,11 @@
 
 	&.active::before {
 		width: 100%;
+
+	}
+
+	&.btn.active::before {
+		width: 0;
 	}
 
 	&::before {
