--- a/style/Pop_up/time__line.less
+++ b/style/Pop_up/time__line.less
@@ -2,24 +2,48 @@
 
 .time__line {
 	display: flex;
+	flex-wrap: wrap;
 	margin: 4.2rem auto;
 	width: 100%;
 	max-width: 768px;
+
+	@media @resume {
+		flex-direction: column;
+		margin: 2rem auto;
+	}
+
+	
 }
 
 .time__line-col {
 	width: 50%;
+
+	@media @resume {
+		width: 100%;
+	}
 }
 
 .left {
 	text-align: right;
 	padding-right: 3.16rem;
 	border-right: 1px solid @text-color;
+
+	@media @resume {
+		text-align: left;
+		padding-right: 0;
+		border-right: 0;
+	}
 }
 
 .right {
 	text-align: left;
 	padding-left: 3.16rem;
+
+	@media @resume {
+		text-align: left;
+		padding-left: 0;
+		padding-top: 2rem;
+	}
 }
 
 .time__line-header {
@@ -29,6 +53,10 @@
 	color: @black;
 
 	margin-bottom: 2.53rem;
+
+	@media @resume {
+		text-align: center;
+	}
 }
 
 .time-interval {
@@ -101,6 +129,10 @@
 	height: 6px;
 
 	background-color: #EFEFEF;
+
+	@media @footer {
+		width: 110px;
+	}
 }
 
 .skills__tools-progress {
@@ -113,6 +145,10 @@
 
 .awards {
 	margin-top: 2.13rem;
+
+	@media @resume {
+		margin-top: 2rem;;
+	}
 }
 
 .awards__item {
@@ -130,8 +166,11 @@
 
 .button__center {
 	text-align: center;
-}
 
+	& a {
+		margin-right: 0 !important; 
+	}
+}
 
 
 /* .skills__tools {
